# thumbelina

./: .envrc  .formatter.exs  .gitignore  Cross.toml  LICENSE  README.md  checksum-Elixir.Thumbelina.Internal.exs  mix.exs  thumbelina.code-workspace
.github/workflows/: elixir.yml  precompile.yml  rust.yml
bench/: bench.exs  benchmark.exs
lib/: application.ex  pipeline.ex  producer.ex  thumbelina.ex
lib/.github/workflows/: elixir.yml
lib/bench/: bench.exs
lib/config/: config.exs
lib/thumbelina/: application.ex  broadway.ex  consumer.ex  handle.ex  image.ex  internal.ex  native.ex  pipeline.ex  producer.ex  server.ex  store.ex  thumbnail.ex
native/thumbelina/: .gitignore  Cargo.toml  README.md
native/thumbelina/src/: image.rs  lib.rs  operation.rs  processor.rs  server.rs  task.rs  thumbelina.rs  worker.rs
native/thumbelina/tests/: test.rs
test/: thumbelina_test.exs
