[package]
name = "thumbelina"
version = "0.1.0"
authors = ["Haile Lagi"]
edition = "2018"

[lib]
name = "thumbelina"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.24.0"
image = "0.24.2"
rayon = "1.7"
tokio = { version = "1.34", features = ["rt-multi-thread", "io-std", "fs", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.18.0"
